Html functionality added (again)